<resources>
    <string name="app_name">week-2</string>
    <string name="university">Universidad Galileo-2023</string>
    <string name="galileoImage">GalileoLogo</string>
    <string name="password">Contraseña</string>
    <string name="user">Usuario</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="home">Inicio</string>
    <string name="score">Puntajes</string>
    <string name="actionButton">Action Button</string>
    <string name="edit">Editar</string>
    <string name="add">Agregar</string>
    <string name="delete">Borrar</string>
    <string name="gender">Sexo:</string>
    <string name="Men">Masculino</string>
    <string name="Female">Femenino</string>
    <string name="choose_option">Escoja una opcion</string>
    <string name="addition">Suma</string>
    <string name="porcent">Promedio</string>
    <string name="greater">Mayor</string>
    <string name="meanor">Menor</string>
    <string name="valor_1">Valor 1</string>
    <string name="valor_3">valor 3</string>
    <string name="valor_2">valor 2</string>
    <string name="calcular">Calcular</string>
    <string name="resultado">Resultado:</string>
</resources>