<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/back_init"
        android:padding="16dp">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <FrameLayout android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:gravity="center"
                     android:layout_weight="1">
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/profilePhoto"
                    android:src="@drawable/logo_app"
                    android:contentDescription="@string/galileoImage"/>
        </FrameLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:paddingTop="25dp"
                android:paddingBottom="25dp">
            <TextView
                    android:id="@+id/optionSelect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_option"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="26sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.19" />
            <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#024CAF50">

                <RadioButton
                        android:id="@+id/radioButton1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/addition"
                        android:textSize="24sp" />

                <RadioButton
                        android:id="@+id/radioButton2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/porcent"
                        android:textSize="24sp" />

                <RadioButton
                        android:id="@+id/radioButton3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/greater"
                        android:textSize="24sp" />

                <RadioButton
                        android:id="@+id/radioButton4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/meanor"
                        android:textSize="24sp" />
            </RadioGroup>

        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4" >
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" >
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/valor_1"
                        android:textSize="16sp" >
                </TextView>
                <EditText android:layout_width="350dp"
                          android:layout_height="50dp"
                          android:autofillHints=""
                          android:inputType="number"
                          android:id="@+id/val1"
                          tools:ignore="LabelFor"
                          style="@android:style/Widget.DeviceDefault.Light.AutoCompleteTextView">

                </EditText>
            </LinearLayout>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" >
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/valor_2"
                        android:id="@+id/val2"

                        android:textSize="16sp" >
                </TextView>
                <EditText android:layout_width="350dp"
                          android:layout_height="50dp"
                          android:autofillHints=""
                          android:inputType="number"
                          tools:ignore="LabelFor">

                </EditText>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" >
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/valor_3"
                        android:id="@+id/val3"
                        android:textSize="16sp" >
                </TextView>
                <EditText android:layout_width="350dp"
                          android:layout_height="50dp"
                          android:autofillHints=""
                          android:inputType="number"
                          tools:ignore="LabelFor">

                </EditText>
            </LinearLayout>
            <Button
                    android:text="@string/calcular"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="1dp"
                    android:id="@+id/button"
                    />
            <LinearLayout android:layout_width="match_parent"
                          android:orientation="horizontal"
                          android:layout_height="0dp"
                          android:layout_weight="1"
                          android:gravity="center">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/resultado"
                        android:textSize="16sp" >
                </TextView>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:id="@+id/result"
                        android:textSize="16sp" android:gravity="center">
                </TextView>
            </LinearLayout>

        </LinearLayout>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:text="@string/university"
                android:textAlignment="center"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>